--- a/assessment.html
+++ b/assessment.html
@@ -14,7 +14,7 @@
   <div id="tweet-area">
     <script>!function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0],
-      p=/^http:/test(d.location)?'http':'https';
+      p=/^http:/.test(d.location)?'http':'https';
       if (!d.getElementById(id)){
         js = d.createElement(s);
         js.id = id;
