--- a/assessment.html
+++ b/assessment.html
@@ -21,6 +21,6 @@
         js.src = p + "//platform.twitter.com/widgets.js";
         fjs.parentNode.insertBefore(js, fjs);
       }
-  }(document, "script", "twitter-wjs"));</script>
+  }(document, "script", "twitter-wjs");</script>
 </body>
 </html>
