--- a/assessment.html
+++ b/assessment.html
@@ -21,6 +21,8 @@
         js.src = p + "://platform.twitter.com/widgets.js";
         fjs.parentNode.insertBefore(js, fjs);
       }
-  }(document, "script", "twitter-wjs");</script>
+    }(document, "script", "twitter-wjs");</script>
+  </div>
+  <script src = "assessment.js"></script>
 </body>
 </html>
